{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 118,
  "lineage": "2b62db86-a95b-8ebe-c56f-a40dd3dba7cf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_debian",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.101.85.97",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-01-29T04:53:48.762-08:00",
            "id": "projects/unified-chess-448404-b9/regions/asia-southeast2/addresses/static-ip-debian",
            "name": "static-ip-debian",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "unified-chess-448404-b9",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/regions/asia-southeast2/addresses/static-ip-debian"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.101.111.214",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-01-29T04:53:48.748-08:00",
            "id": "projects/unified-chess-448404-b9/regions/asia-southeast2/addresses/static-ip-ubuntu",
            "name": "static-ip-ubuntu",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "unified-chess-448404-b9",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/regions/asia-southeast2/addresses/static-ip-ubuntu"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "3000",
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-29T04:54:32.470-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/unified-chess-448404-b9/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/networks/custom-vpc",
            "priority": 1000,
            "project": "unified-chess-448404-b9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-01-29T04:54:32.493-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/unified-chess-448404-b9/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/networks/custom-vpc",
            "priority": 1000,
            "project": "unified-chess-448404-b9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-01-29T04:54:32.433-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/unified-chess-448404-b9/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/networks/custom-vpc",
            "priority": 1000,
            "project": "unified-chess-448404-b9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "debian-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250123",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/zones/asia-southeast2-a/disks/debian-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/unified-chess-448404-b9/zones/asia-southeast2-a/instances/debian-server",
            "instance_id": "3649851833879862244",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "xzeEQyZo4Zw=",
            "name": "debian-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.85.97",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/networks/custom-vpc",
                "network_ip": "10.184.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/regions/asia-southeast2/subnetworks/custom-vpc",
                "subnetwork_project": "unified-chess-448404-b9"
              }
            ],
            "project": "unified-chess-448404-b9",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/zones/asia-southeast2-a/instances/debian-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-icmp",
              "allow-ssh"
            ],
            "tags_fingerprint": "QgOA44LRzSM=",
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip_debian",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-amd64-v20250117",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/zones/asia-southeast2-a/disks/ubuntu-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/unified-chess-448404-b9/zones/asia-southeast2-a/instances/ubuntu-server",
            "instance_id": "4348448270531927013",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "xzeEQyZo4Zw=",
            "name": "ubuntu-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.111.214",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/networks/custom-vpc",
                "network_ip": "10.184.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/regions/asia-southeast2/subnetworks/custom-vpc",
                "subnetwork_project": "unified-chess-448404-b9"
              }
            ],
            "project": "unified-chess-448404-b9",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/zones/asia-southeast2-a/instances/ubuntu-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-icmp",
              "allow-ssh"
            ],
            "tags_fingerprint": "QgOA44LRzSM=",
            "zone": "asia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip_ubuntu",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/unified-chess-448404-b9/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "unified-chess-448404-b9",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/unified-chess-448404-b9/global/networks/custom-vpc"
          }
        }
      ]
    }
  ]
}